--- a/style.css
+++ b/style.css
@@ -22,3 +22,15 @@ canvas {
   height: 100%;
   max-height: 2rem;
 }
+
+.link-to-github {
+  position: fixed;
+  right: 0.5rem;
+  top: 0.5rem;
+  z-index: 99;
+  transition: transform 0.3s ease-in-out;
+}
+
+.link-to-github:hover {
+  transform: rotate(10deg);
+}
